# ExampleWebsite

./: index.html  logic.js  pyproject.toml  style.css
api/: main.py
static/: logic.js
templates/: base.html  homepage.html
