[tool.poetry]
name = "Example Project"
version = "0.0.0"
description = "Example Project"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]

[tool.poetry.dependencies]
fastapi = "^0.92.0"
python = ">=3.8,<3.12"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
